# rust4web

./: .env.default  Cargo.toml  README.md  TODO.md  acro.txt  compose.yml  devapp.sh
app/: env.rs  main.rs  model.rs  routes.rs  views.rs
app/model/: db.rs  mod.rs
app/routes/: api_comments.rs  api_create_comment.rs  api_read_comments.rs  home.rs  mod.rs  text.rs
docker/: app.dev.Dockerfile
static/: reset.js
templates/: layout.html
templates/components/: counter.html  pop.html  post_comment.html  read_comments.html
templates/pages/: greet.html  home.html  text.html
