[package]
name = "trax"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
axum-htmx = "0.5.0"
lazy_static = "1.4.0"
serde = { version = "1.0.193", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio"] }
tera = "1.19.1"
tokio = { version = "1.34.0", features=["full"] }

[[bin]]
name = "app"
path = "app/main.rs"
